# mach-browser

./: .gitignore  Cargo.toml  NOTICE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/mach/: Cargo.toml
crates/mach-agent/: Cargo.toml
crates/mach-agent/src/: lib.rs  links.rs  markdown.rs  text.rs
crates/mach-core/: Cargo.toml
crates/mach-core/src/: config.rs  error.rs  lib.rs  notification.rs
crates/mach-dom/: Cargo.toml
crates/mach-dom/src/: lib.rs
crates/mach-js/: Cargo.toml  build.rs
crates/mach-js/src/: bindings.rs  dom.rs  lib.rs
crates/mach-net/: Cargo.toml
crates/mach-net/src/: lib.rs
crates/mach-parser/: Cargo.toml
crates/mach-parser/src/: lib.rs
crates/mach-profile/: Cargo.toml
crates/mach-profile/src/: chrome_linux.rs  lib.rs
crates/mach/src/: cli.rs  fetch.rs  js.rs  main.rs
docs/: architecture.md
