[package]
name = "mach-agent"
description = "Agent-first dump formats: html, markdown, links, text."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mach-dom = { workspace = true }

url = { workspace = true }
