[package]
name = "mach-core"
description = "Shared types and configuration for mach-browser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
