[package]
name = "mach-js"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "V8 isolate + context lifecycle for mach-browser."

[dependencies]
mach-core.workspace = true
v8.workspace = true
